--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -9,17 +9,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       # Setup .npmrc file to publish to npm
-      - name: Generate Angular Client
-        uses: actions/setup-node@v3
-      - name: Generator typescript sdk
-        run: npx @openapitools/openapi-generator-cli generate -i openapi.yaml -g typescript-fetch -o ./ts-sdk --additional-properties=npmName=argus-ts-sdk
-      - run: cp -r ts-sdk/* .
-      - run: cp ts-sdk/.* .
-      - run: npm version --preid=alpha prerelease
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18.x"
-          registry-url: "https://registry.npmjs.org"
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      # - name: Generate Angular Client
+      #   uses: actions/setup-node@v3
+      # - name: Generator typescript sdk
+      #   run: npx @openapitools/openapi-generator-cli generate -i openapi.yaml -g typescript-fetch -o ./ts-sdk --additional-properties=npmName=argus-ts-sdk
+      # - run: cp -r ts-sdk/* .
+      # - run: cp ts-sdk/.* .
+      # - run: npm version --preid=alpha prerelease
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: "18.x"
+      #     registry-url: "https://registry.npmjs.org"
+      # - run: npm publish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
